infra/manifest/test-manifest/overlays/dev/test-5.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
  namespace: dev
  labels:
    app: rollout-bluegreen
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: rollouts-demo
       #image: argoproj/rollouts-demo:blue
        image: argoproj/rollouts-demo:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
  strategy:
    blueGreen:
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: false

---

apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
  namespace: dev
  labels:
    app: rollout-bluegreen
    env: dev
spec:
  selector:
    app: rollout-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
  namespace: dev
  labels:
    app: rollout-bluegreen
    env: dev
spec:
  selector:
    app: rollout-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
