infra/manifest/test-manifest/overlays/dev/test-ingress-4.yaml
apiVersion: networking.k8s.io/v1                                                        
kind: Ingress                                                                           
metadata:                                                                               
  name: test-ingress-4                                                               
  namespace: dev                                                                       
  annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/healthcheck-port: "8000"
      alb.ingress.kubernetes.io/healthcheck-path: /health_check
      alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
      alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
      alb.ingress.kubernetes.io/group.name: test-dev-2
      alb.ingress.kubernetes.io/group.order: '2'
      alb.ingress.kubernetes.io/actions.ssl-redirect: {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:                                                                       
  ingressClassName: alb
  rules:
  - host: test4.aws.test.dev.com
    http:
      paths:
        - pathType: Prefix
          path: / 
          backend:
            service:
              name: test-service-4
              port:
                number: 80
